# Practical_RL

./: pyproject.toml
.devcontainer/: devcontainer.json
week01_intro/: crossentropy_method.ipynb  deep_crossentropy_method.ipynb
week02_value_based/: mdp.py  seminar_vi.ipynb
week03_model_free/: homework.ipynb
week04_approx_rl/: homework_pytorch_debug.ipynb  homework_pytorch_main.ipynb  seminar_pytorch.ipynb
week05_explore/: week5.ipynb
