[tool.poetry]
name = "rl"
version = "0.1.0"
description = ""
authors = ["alekseik1 <1alekseik1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.13"
gym = {version = "^0.17", extras = ["box2d", "atari", "classic_control"]}
matplotlib = "^3.7.1"
tqdm = "^4.65.0"
pygame = "^2.3.0"
pandas = "^2.0.0"
bsuite = "^0.3.5"

[tool.poetry.group.dev.dependencies]
notebook = "^6.5.4"
black = "^23.3.0"
isort = "^5.12.0"
flake8-docstrings = "^1.7.0"
flake8-builtins = "^2.1.0"
flake8-quotes = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"